--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,13 +36,13 @@ logging.level.root=error
 #oauth2 \uC124\uC815\uB4F1\uB85D
 # GOOGLE
 spring.security.oauth2.client.registration.google.client-id= 606466601847-e6t8hqg1ou85i2mf8hh3pf934taruj32.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret= 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
+spring.security.oauth2.client.registration.google.client-secret= []
 spring.security.oauth2.client.registration.google.scope= profile, email
 
 # \uAD6C\uAE00\uC774\uB098 \uD398\uC774\uC2A4\uBD81\uC740 \uC548\uC801\uC5B4\uB3C4 \uB418\uB294\uB370, \uB124\uC774\uBC84\uB098 \uCE74\uCE74\uC624\uB294 \uC801\uC5B4\uC918\uC57C\uD568(\uAE30\uBCF8 \uC81C\uACF5 provider\uAC00 \uC544\uB2C8\uAE30 \uB54C\uBB38\uC5D0)
 # Naver
 spring.security.oauth2.client.registration.naver.client-id = ujWkSV8NkWg4zK8puJhH
-spring.security.oauth2.client.registration.naver.client-secret= jSLcswvk_D
+spring.security.oauth2.client.registration.naver.client-secret= []
 spring.security.oauth2.client.registration.naver.redirect-uri= http://localhost:8284/login/oauth2/code/naver
 spring.security.oauth2.client.registration.naver.authorization-grant-type= authorization_code
 spring.security.oauth2.client.registration.naver.client-name= Naver
@@ -57,7 +57,7 @@ spring.security.oauth2.client.provider.naver.user-name-attribute= response
 
 ## KAKAO
 spring.security.oauth2.client.registration.kakao.client-id = 53d08f69937cdc9bdfdb8a91b82b6e60
-spring.security.oauth2.client.registration.kakao.client-secret = lEnpOzxgPka0jjoTY4FFQPNd49iVfHjD
+spring.security.oauth2.client.registration.kakao.client-secret = []
 spring.security.oauth2.client.registration.kakao.redirect-uri= http://localhost:8284/login/oauth2/code/kakao
 spring.security.oauth2.client.registration.kakao.authorization-grant-type= authorization_code
 spring.security.oauth2.client.registration.kakao.scope= profile_nickname
